Fix titles and center align beneficiary search

--- a/vision-aid-prototype-v1/styles/globals.css
+++ b/vision-aid-prototype-v1/styles/globals.css
@@ -331,6 +331,7 @@ label {
 }
 
 .beneficiary-child-container {
+  margin: 0 auto;
   width: 60%;
 }
 
